# bestdori-voice-extractor

./: .gitignore  README.md  __main__.py  interactive_extractor.py  pyproject.toml
bestdori_voice_extractor/: config.py  locale.py  merger.py
bestdori_voice_extractor/analyzer/: asset.py  base.py  voice.py
bestdori_voice_extractor/downloader/: __init__.py  asset.py  base.py  voice.py
