[tool.poetry]
name = "bestdori-voice-extractor"
version = "0.1.0"
description = ""
authors = ["zyf722 <1124982772@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
